# ngrs

./: .envrc  Cargo.toml  README.md  README.org  README_CN.org  build.rs  changelog.org  manifest.scm  rdm.md  wrapper.h
.ccls-cache/@yumemi@develop@ProgramDevelop@ngrs/: src@wrappers@wrapper.c.blob  wrapper.h.blob  wrapper@wrapper.c  wrapper@wrapper.c.blob
examples/: shell.rs
guile/: Cargo.toml
guile/src/: lib.rs  runtime.rs  values.rs  with_guile.rs
nguile/: Cargo.toml
nguile/src/: lib.rs
raw-guile/: Cargo.toml  build.rs
raw-guile/src/: build.rs  lib.rs
src/: ffi.rs  lib.rs  raw.rs  runtime.rs  values.rs  with_guile.rs
src/values/: bool.rs  complex_types.rs  foreign.rs  mod.rs  number.rs  procedure.rs  str.rs
src/wrappers/: wrapper.c  wrapper.h
tests/: eval.rs  initialize.rs  multi_thread.rs  runtime.rs  value.rs
