[package]
name = "ngrs"
version = "0.1.0"
edition = "2024"
authors = ["MinkieYume <minkieyume@yumieko.com>"]
description = "Safe bindings to GNU Guile."
repository = "https://github.com/minkieyume/ngrs"
license = "MIT OR Apache-2.0"

[workspace]
members = ["raw-guile", "guile"]
resolver = "2"

[lib]
name = "ngrs"
path = "src/lib.rs"

[dependencies]
guile = { path = "guile" }
raw-guile = { path = "raw-guile" }
ctor = "0.2"

[[test]]
name = "multi_thread"
path = "tests/multi_thread.rs"

[[test]]
name = "initialize"
path = "tests/initialize.rs"

[[test]]
name = "eval"
path = "tests/eval.rs"

[[example]]
name = "shell"
path = "examples/shell.rs"