[package]
name = "ngrs"
version = "0.1.3"
edition = "2024"
authors = ["MinkieYume <minkieyume@yumieko.com>"]
description = "A New Rust bindings for GNU Guile Scheme"
repository = "https://github.com/minkieyume/ngrs"
homepage = "https://github.com/minkieyume/ngrs"
license = "MIT OR Apache-2.0"
readme = "rdm.md"
documentation = "https://docs.rs/ngrs"
keywords = ["guile", "scheme", "ffi", "scripting", "lisp"]
categories = ["api-bindings", "development-tools::ffi"]

[lib]
name = "ngrs"
path = "src/lib.rs"

[dependencies]
ctor = "0.2"
libc = "0.2"
num-complex = "0.4"

[build-dependencies]
bindgen = "0.72.1"
pkg-config = "0.3"
cc = "1.2"


[[test]]
name = "multi_thread"
path = "tests/multi_thread.rs"

[[test]]
name = "initialize"
path = "tests/initialize.rs"

[[test]]
name = "runtime"
path = "tests/runtime.rs"

[[example]]
name = "shell"
path = "examples/shell.rs"