[package]
name = "raw-guile"
version = "0.1.0"
edition = "2024"
authors = ["MinkieYume <minkieyume@yumieko.com>"]
description = "Safe bindings to GNU Guile."
repository = "https://github.com/minkieyume/ngrs"
license = "MIT OR Apache-2.0"

[lib]
name = "raw_guile"
path = "src/lib.rs"

[build-dependencies]
bindgen = "0.72.1"
pkg-config = "0.3"